@@ -13,14 +13,12 @@ import java.util.List;
 public class DocumentationItem {
     private final String id;
     private final String key;
-    private final String basePath;
     private final String filename;
     private final List<String> related = new ArrayList<String>();
 
-    public DocumentationItem(String id, String key, String basePath, String filename) {
+    public DocumentationItem(String id, String key, String filename) {
         this.id = id;
         this.key = key;
-        this.basePath = basePath;
         this.filename = filename;
     }
 
@@ -34,10 +32,6 @@ public class DocumentationItem {
 
     public String getKey() {
         return key;
-    }
-
-    public String getBasePath() {
-        return basePath;
     }
 
     public String getFilename() {
